@@ -2146,6 +2146,9 @@ static const LuaWrapper::FunctionReg dfhack_items_module[] = {
     WRAPM(Items, canTradeWithContents),
     WRAPM(Items, canTradeAnyWithContents),
     WRAPM(Items, markForTrade),
+    WRAPM(Items, canMelt),
+    WRAPM(Items, markForMelting),
+    WRAPM(Items, cancelMelting),
     WRAPM(Items, isRouteVehicle),
     WRAPM(Items, isSquadEquipment),
     WRAPM(Items, getCapacity),
